; ModuleID = '/home/carl/AnghaBench/linux/drivers/rpmsg/extr_qcom_glink_native.c_qcom_glink_send_version.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rpmsg/extr_qcom_glink_native.c_qcom_glink_send_version.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.qcom_glink = type { i32 }
%struct.glink_msg = type { i32, i8*, i8* }

@RPM_CMD_VERSION = common dso_local global i32 0, align 4
@GLINK_VERSION_1 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.qcom_glink*)* @qcom_glink_send_version to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @qcom_glink_send_version(%struct.qcom_glink* %0) #0 {
  %2 = alloca %struct.qcom_glink*, align 8
  %3 = alloca %struct.glink_msg, align 8
  store %struct.qcom_glink* %0, %struct.qcom_glink** %2, align 8
  %4 = load i32, i32* @RPM_CMD_VERSION, align 4
  %5 = call i8* @cpu_to_le16(i32 %4)
  %6 = getelementptr inbounds %struct.glink_msg, %struct.glink_msg* %3, i32 0, i32 2
  store i8* %5, i8** %6, align 8
  %7 = load i32, i32* @GLINK_VERSION_1, align 4
  %8 = call i8* @cpu_to_le16(i32 %7)
  %9 = getelementptr inbounds %struct.glink_msg, %struct.glink_msg* %3, i32 0, i32 1
  store i8* %8, i8** %9, align 8
  %10 = load %struct.qcom_glink*, %struct.qcom_glink** %2, align 8
  %11 = getelementptr inbounds %struct.qcom_glink, %struct.qcom_glink* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 4
  %13 = call i32 @cpu_to_le32(i32 %12)
  %14 = getelementptr inbounds %struct.glink_msg, %struct.glink_msg* %3, i32 0, i32 0
  store i32 %13, i32* %14, align 8
  %15 = load %struct.qcom_glink*, %struct.qcom_glink** %2, align 8
  %16 = call i32 @qcom_glink_tx(%struct.qcom_glink* %15, %struct.glink_msg* %3, i32 24, i32* null, i32 0, i32 1)
  ret i32 %16
}

declare dso_local i8* @cpu_to_le16(i32) #1

declare dso_local i32 @cpu_to_le32(i32) #1

declare dso_local i32 @qcom_glink_tx(%struct.qcom_glink*, %struct.glink_msg*, i32, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
